# enterprise/api/v1/models/private_network_addressing.go
@@ -1,0 +1,155 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+// Copyright (C) Isovalent, Inc. - All Rights Reserved.
+//
+// NOTICE: All information contained herein is, and remains the property of
+// Isovalent Inc and its suppliers, if any. The intellectual and technical
+// concepts contained herein are proprietary to Isovalent Inc and its suppliers
+// and may be covered by U.S. and Foreign Patents, patents in process, and are
+// protected by trade secret or copyright law.  Dissemination of this information
+// or reproduction of this material is strictly forbidden unless prior written
+// permission is obtained from Isovalent Inc.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	stderrors "errors"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// PrivateNetworkAddressing Description of a private network
+//
+// swagger:model PrivateNetworkAddressing
+type PrivateNetworkAddressing struct {
+
+	// Time timestamp when the pod was activated
+	// Format: date-time
+	ActivatedAt strfmt.DateTime `json:"activatedAt,omitempty"`
+
+	// address
+	Address *AddressPair `json:"address,omitempty"`
+
+	// MAC address of the endpoint within the private network
+	Mac string `json:"mac,omitempty"`
+
+	// Private network name
+	Network string `json:"network,omitempty"`
+}
+
+// Validate validates this private network addressing
+func (m *PrivateNetworkAddressing) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateActivatedAt(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateAddress(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *PrivateNetworkAddressing) validateActivatedAt(formats strfmt.Registry) error {
+	if swag.IsZero(m.ActivatedAt) { // not required
+		return nil
+	}
+
+	if err := validate.FormatOf("activatedAt", "body", "date-time", m.ActivatedAt.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *PrivateNetworkAddressing) validateAddress(formats strfmt.Registry) error {
+	if swag.IsZero(m.Address) { // not required
+		return nil
+	}
+
+	if m.Address != nil {
+		if err := m.Address.Validate(formats); err != nil {
+			ve := new(errors.Validation)
+			if stderrors.As(err, &ve) {
+				return ve.ValidateName("address")
+			}
+			ce := new(errors.CompositeError)
+			if stderrors.As(err, &ce) {
+				return ce.ValidateName("address")
+			}
+
+			return err
+		}
+	}
+
+	return nil
+}
+
+// ContextValidate validate this private network addressing based on the context it is used
+func (m *PrivateNetworkAddressing) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateAddress(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *PrivateNetworkAddressing) contextValidateAddress(ctx context.Context, formats strfmt.Registry) error {
+
+	if m.Address != nil {
+
+		if swag.IsZero(m.Address) { // not required
+			return nil
+		}
+
+		if err := m.Address.ContextValidate(ctx, formats); err != nil {
+			ve := new(errors.Validation)
+			if stderrors.As(err, &ve) {
+				return ve.ValidateName("address")
+			}
+			ce := new(errors.CompositeError)
+			if stderrors.As(err, &ce) {
+				return ce.ValidateName("address")
+			}
+
+			return err
+		}
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *PrivateNetworkAddressing) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *PrivateNetworkAddressing) UnmarshalBinary(b []byte) error {
+	var res PrivateNetworkAddressing
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
