# enterprise/api/v1/models/private_network_addressing_response.go
@@ -1,0 +1,138 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+// Copyright (C) Isovalent, Inc. - All Rights Reserved.
+//
+// NOTICE: All information contained herein is, and remains the property of
+// Isovalent Inc and its suppliers, if any. The intellectual and technical
+// concepts contained herein are proprietary to Isovalent Inc and its suppliers
+// and may be covered by U.S. and Foreign Patents, patents in process, and are
+// protected by trade secret or copyright law.  Dissemination of this information
+// or reproduction of this material is strictly forbidden unless prior written
+// permission is obtained from Isovalent Inc.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	stderrors "errors"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// PrivateNetworkAddressingResponse Contains the endpoint's private network specific information
+//
+// swagger:model PrivateNetworkAddressingResponse
+type PrivateNetworkAddressingResponse struct {
+
+	// Optional network addressing information. Empty if the endpoint is not attached to a specific private network.
+	//
+	Addressing *PrivateNetworkAddressing `json:"addressing,omitempty"`
+
+	// Name of the pod which is attached to these networks
+	PodName string `json:"pod-name,omitempty"`
+
+	// Namespace of the pod which is attached to these networks
+	PodNamespace string `json:"pod-namespace,omitempty"`
+
+	// UID of the pod which is attached to these networks
+	PodUID string `json:"pod-uid,omitempty"`
+}
+
+// Validate validates this private network addressing response
+func (m *PrivateNetworkAddressingResponse) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateAddressing(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *PrivateNetworkAddressingResponse) validateAddressing(formats strfmt.Registry) error {
+	if swag.IsZero(m.Addressing) { // not required
+		return nil
+	}
+
+	if m.Addressing != nil {
+		if err := m.Addressing.Validate(formats); err != nil {
+			ve := new(errors.Validation)
+			if stderrors.As(err, &ve) {
+				return ve.ValidateName("addressing")
+			}
+			ce := new(errors.CompositeError)
+			if stderrors.As(err, &ce) {
+				return ce.ValidateName("addressing")
+			}
+
+			return err
+		}
+	}
+
+	return nil
+}
+
+// ContextValidate validate this private network addressing response based on the context it is used
+func (m *PrivateNetworkAddressingResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateAddressing(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *PrivateNetworkAddressingResponse) contextValidateAddressing(ctx context.Context, formats strfmt.Registry) error {
+
+	if m.Addressing != nil {
+
+		if swag.IsZero(m.Addressing) { // not required
+			return nil
+		}
+
+		if err := m.Addressing.ContextValidate(ctx, formats); err != nil {
+			ve := new(errors.Validation)
+			if stderrors.As(err, &ve) {
+				return ve.ValidateName("addressing")
+			}
+			ce := new(errors.CompositeError)
+			if stderrors.As(err, &ce) {
+				return ce.ValidateName("addressing")
+			}
+
+			return err
+		}
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *PrivateNetworkAddressingResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *PrivateNetworkAddressingResponse) UnmarshalBinary(b []byte) error {
+	var res PrivateNetworkAddressingResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
