# enterprise/api/v1/openapi.yaml
@@ -47,6 +47,28 @@ paths:
         '501':
           description: Network attachment feature is disabled
           x-go-name: Disabled
+  "/network/private/addressing":
+    get:
+      summary: Retrieve the private network for the pod
+      tags:
+        - network
+      parameters:
+        - "$ref": "#/parameters/network-pod-name"
+        - "$ref": "#/parameters/network-pod-namespace"
+        - "$ref": "#/parameters/network-pod-uid"
+      responses:
+        '200':
+          description: Success
+          schema:
+            "$ref": "#/definitions/PrivateNetworkAddressingResponse"
+        '500':
+          description: Network attachment error
+          x-go-name: Failure
+          schema:
+            "$ref": "#/definitions/Error"
+        '501':
+          description: Private network feature is disabled
+          x-go-name: Disabled
   "/config":
     get:
       summary: Get configuration of enterprise-only features of Cilium daemon
@@ -67,6 +89,12 @@ parameters:
   network-pod-namespace:
     name: pod-namespace
     description: Kubernetes pod namespace for which to query the network attachment
+    required: true
+    in: query
+    type: string
+  network-pod-uid:
+    name: pod-uid
+    description: Kubernetes pod uid for which to query the network attachment
     required: true
     in: query
     type: string
@@ -131,6 +159,50 @@ definitions:
         type: boolean
       mode:
         description: Private networks mode
+        type: string
+  PrivateNetworkAddressingResponse:
+    description: |-
+      Contains the endpoint's private network specific information
+    properties:
+      pod-name:
+        description: Name of the pod which is attached to these networks
+        type: string
+      pod-namespace:
+        description: Namespace of the pod which is attached to these networks
+        type: string
+      pod-uid:
+        description: UID of the pod which is attached to these networks
+        type: string
+      addressing:
+        description: >
+          Optional network addressing information. Empty if the endpoint is not
+          attached to a specific private network.
+        "$ref": "#/definitions/PrivateNetworkAddressing"
+  PrivateNetworkAddressing:
+    description: Description of a private network
+    type: object
+    properties:
+      network:
+        description: Private network name
+        type: string
+      address:
+        "$ref": "#/definitions/AddressPair"
+      mac:
+        description: MAC address of the endpoint within the private network
+        type: string
+      activatedAt:
+        description: Time timestamp when the pod was activated
+        type: string
+        format: date-time
+  AddressPair:
+    description: Addressing information of an endpoint
+    type: object
+    properties:
+      ipv4:
+        description: IPv4 address
+        type: string
+      ipv6:
+        description: IPv6 address
         type: string
   EnterpriseDaemonConfiguration:
     description: The current configuration of any enterprise-only features
