# enterprise/api/v1/server/restapi/network/get_network_private_addressing.go
@@ -1,0 +1,67 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+// Copyright (C) Isovalent, Inc. - All Rights Reserved.
+//
+// NOTICE: All information contained herein is, and remains the property of
+// Isovalent Inc and its suppliers, if any. The intellectual and technical
+// concepts contained herein are proprietary to Isovalent Inc and its suppliers
+// and may be covered by U.S. and Foreign Patents, patents in process, and are
+// protected by trade secret or copyright law.  Dissemination of this information
+// or reproduction of this material is strictly forbidden unless prior written
+// permission is obtained from Isovalent Inc.
+
+package network
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
+)
+
+// GetNetworkPrivateAddressingHandlerFunc turns a function with the right signature into a get network private addressing handler
+type GetNetworkPrivateAddressingHandlerFunc func(GetNetworkPrivateAddressingParams) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn GetNetworkPrivateAddressingHandlerFunc) Handle(params GetNetworkPrivateAddressingParams) middleware.Responder {
+	return fn(params)
+}
+
+// GetNetworkPrivateAddressingHandler interface for that can handle valid get network private addressing params
+type GetNetworkPrivateAddressingHandler interface {
+	Handle(GetNetworkPrivateAddressingParams) middleware.Responder
+}
+
+// NewGetNetworkPrivateAddressing creates a new http.Handler for the get network private addressing operation
+func NewGetNetworkPrivateAddressing(ctx *middleware.Context, handler GetNetworkPrivateAddressingHandler) *GetNetworkPrivateAddressing {
+	return &GetNetworkPrivateAddressing{Context: ctx, Handler: handler}
+}
+
+/*
+	GetNetworkPrivateAddressing swagger:route GET /network/private/addressing network getNetworkPrivateAddressing
+
+Retrieve the private network for the pod
+*/
+type GetNetworkPrivateAddressing struct {
+	Context *middleware.Context
+	Handler GetNetworkPrivateAddressingHandler
+}
+
+func (o *GetNetworkPrivateAddressing) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		*r = *rCtx
+	}
+	var Params = NewGetNetworkPrivateAddressingParams()
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params) // actually handle the request
+
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
