# enterprise/api/v1/server/restapi/network/get_network_private_addressing_parameters.go
@@ -1,0 +1,154 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+// Copyright (C) Isovalent, Inc. - All Rights Reserved.
+//
+// NOTICE: All information contained herein is, and remains the property of
+// Isovalent Inc and its suppliers, if any. The intellectual and technical
+// concepts contained herein are proprietary to Isovalent Inc and its suppliers
+// and may be covered by U.S. and Foreign Patents, patents in process, and are
+// protected by trade secret or copyright law.  Dissemination of this information
+// or reproduction of this material is strictly forbidden unless prior written
+// permission is obtained from Isovalent Inc.
+
+package network
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/validate"
+)
+
+// NewGetNetworkPrivateAddressingParams creates a new GetNetworkPrivateAddressingParams object
+//
+// There are no default values defined in the spec.
+func NewGetNetworkPrivateAddressingParams() GetNetworkPrivateAddressingParams {
+
+	return GetNetworkPrivateAddressingParams{}
+}
+
+// GetNetworkPrivateAddressingParams contains all the bound params for the get network private addressing operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters GetNetworkPrivateAddressing
+type GetNetworkPrivateAddressingParams struct {
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*Kubernetes pod name for which to query the network attachment
+	  Required: true
+	  In: query
+	*/
+	PodName string
+
+	/*Kubernetes pod namespace for which to query the network attachment
+	  Required: true
+	  In: query
+	*/
+	PodNamespace string
+
+	/*Kubernetes pod uid for which to query the network attachment
+	  Required: true
+	  In: query
+	*/
+	PodUID string
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewGetNetworkPrivateAddressingParams() beforehand.
+func (o *GetNetworkPrivateAddressingParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+	qs := runtime.Values(r.URL.Query())
+
+	qPodName, qhkPodName, _ := qs.GetOK("pod-name")
+	if err := o.bindPodName(qPodName, qhkPodName, route.Formats); err != nil {
+		res = append(res, err)
+	}
+
+	qPodNamespace, qhkPodNamespace, _ := qs.GetOK("pod-namespace")
+	if err := o.bindPodNamespace(qPodNamespace, qhkPodNamespace, route.Formats); err != nil {
+		res = append(res, err)
+	}
+
+	qPodUID, qhkPodUID, _ := qs.GetOK("pod-uid")
+	if err := o.bindPodUID(qPodUID, qhkPodUID, route.Formats); err != nil {
+		res = append(res, err)
+	}
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// bindPodName binds and validates parameter PodName from query.
+func (o *GetNetworkPrivateAddressingParams) bindPodName(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	if !hasKey {
+		return errors.Required("pod-name", "query", rawData)
+	}
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: true
+	// AllowEmptyValue: false
+
+	if err := validate.RequiredString("pod-name", "query", raw); err != nil {
+		return err
+	}
+	o.PodName = raw
+
+	return nil
+}
+
+// bindPodNamespace binds and validates parameter PodNamespace from query.
+func (o *GetNetworkPrivateAddressingParams) bindPodNamespace(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	if !hasKey {
+		return errors.Required("pod-namespace", "query", rawData)
+	}
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: true
+	// AllowEmptyValue: false
+
+	if err := validate.RequiredString("pod-namespace", "query", raw); err != nil {
+		return err
+	}
+	o.PodNamespace = raw
+
+	return nil
+}
+
+// bindPodUID binds and validates parameter PodUID from query.
+func (o *GetNetworkPrivateAddressingParams) bindPodUID(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	if !hasKey {
+		return errors.Required("pod-uid", "query", rawData)
+	}
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: true
+	// AllowEmptyValue: false
+
+	if err := validate.RequiredString("pod-uid", "query", raw); err != nil {
+		return err
+	}
+	o.PodUID = raw
+
+	return nil
+}
