# enterprise/api/v1/server/restapi/network/get_network_private_addressing_responses.go
@@ -1,0 +1,137 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+// Copyright (C) Isovalent, Inc. - All Rights Reserved.
+//
+// NOTICE: All information contained herein is, and remains the property of
+// Isovalent Inc and its suppliers, if any. The intellectual and technical
+// concepts contained herein are proprietary to Isovalent Inc and its suppliers
+// and may be covered by U.S. and Foreign Patents, patents in process, and are
+// protected by trade secret or copyright law.  Dissemination of this information
+// or reproduction of this material is strictly forbidden unless prior written
+// permission is obtained from Isovalent Inc.
+
+package network
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/cilium/cilium/enterprise/api/v1/models"
+)
+
+// GetNetworkPrivateAddressingOKCode is the HTTP code returned for type GetNetworkPrivateAddressingOK
+const GetNetworkPrivateAddressingOKCode int = 200
+
+/*
+GetNetworkPrivateAddressingOK Success
+
+swagger:response getNetworkPrivateAddressingOK
+*/
+type GetNetworkPrivateAddressingOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.PrivateNetworkAddressingResponse `json:"body,omitempty"`
+}
+
+// NewGetNetworkPrivateAddressingOK creates GetNetworkPrivateAddressingOK with default headers values
+func NewGetNetworkPrivateAddressingOK() *GetNetworkPrivateAddressingOK {
+
+	return &GetNetworkPrivateAddressingOK{}
+}
+
+// WithPayload adds the payload to the get network private addressing o k response
+func (o *GetNetworkPrivateAddressingOK) WithPayload(payload *models.PrivateNetworkAddressingResponse) *GetNetworkPrivateAddressingOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get network private addressing o k response
+func (o *GetNetworkPrivateAddressingOK) SetPayload(payload *models.PrivateNetworkAddressingResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetNetworkPrivateAddressingOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetNetworkPrivateAddressingFailureCode is the HTTP code returned for type GetNetworkPrivateAddressingFailure
+const GetNetworkPrivateAddressingFailureCode int = 500
+
+/*
+GetNetworkPrivateAddressingFailure Network attachment error
+
+swagger:response getNetworkPrivateAddressingFailure
+*/
+type GetNetworkPrivateAddressingFailure struct {
+
+	/*
+	  In: Body
+	*/
+	Payload models.Error `json:"body,omitempty"`
+}
+
+// NewGetNetworkPrivateAddressingFailure creates GetNetworkPrivateAddressingFailure with default headers values
+func NewGetNetworkPrivateAddressingFailure() *GetNetworkPrivateAddressingFailure {
+
+	return &GetNetworkPrivateAddressingFailure{}
+}
+
+// WithPayload adds the payload to the get network private addressing failure response
+func (o *GetNetworkPrivateAddressingFailure) WithPayload(payload models.Error) *GetNetworkPrivateAddressingFailure {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get network private addressing failure response
+func (o *GetNetworkPrivateAddressingFailure) SetPayload(payload models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetNetworkPrivateAddressingFailure) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	payload := o.Payload
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
+
+// GetNetworkPrivateAddressingDisabledCode is the HTTP code returned for type GetNetworkPrivateAddressingDisabled
+const GetNetworkPrivateAddressingDisabledCode int = 501
+
+/*
+GetNetworkPrivateAddressingDisabled Private network feature is disabled
+
+swagger:response getNetworkPrivateAddressingDisabled
+*/
+type GetNetworkPrivateAddressingDisabled struct {
+}
+
+// NewGetNetworkPrivateAddressingDisabled creates GetNetworkPrivateAddressingDisabled with default headers values
+func NewGetNetworkPrivateAddressingDisabled() *GetNetworkPrivateAddressingDisabled {
+
+	return &GetNetworkPrivateAddressingDisabled{}
+}
+
+// WriteResponse to the client
+func (o *GetNetworkPrivateAddressingDisabled) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) // Remove Content-Type on empty responses
+
+	rw.WriteHeader(501)
+}
